--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ footer p{
 .power{
 	min-height: 400px;
 	background: url('../images/white.jpg') no-repeat 0 -200px;
+
 }
 .p1{
 	height:20px;
@@ -204,8 +205,8 @@ footer p{
 	margin-bottom: 60px;
 }
  .p2{
- 	height: 10px
- 	width: 100%;
+ 	height: 10px;
+ 	width: 80%;
  	margin-left: 150px;
 
  }
