added media view

--- a/css/style.css
+++ b/css/style.css
@@ -274,5 +274,18 @@ footer p{
 	margin-left:20px;
 }
 
+/*media response*/
+
+#main{
+	width: 1500px;
+	margin: 0px auto;
+}
+
+@media screen and (max-width:1199px){
+	#main{
+		width:100%;
+	}
+}
+
 
 
